JWT authorization for list api
